test/users/vass/type-tests.todo.good
type-tests.todo.chpl:6: warning: sync is a class:  false
type-tests.todo.chpl:6: warning: sync is a record: false
type-tests.todo.chpl:6: warning: sync is a union:  false
type-tests.todo.chpl:6: warning: sync is a sync:   true / true
type-tests.todo.chpl:6: warning: sync is a single: false / false
type-tests.todo.chpl:7: warning: single is a class:  false
type-tests.todo.chpl:7: warning: single is a record: false
type-tests.todo.chpl:7: warning: single is a union:  false
type-tests.todo.chpl:7: warning: single is a sync:   false / false
type-tests.todo.chpl:7: warning: single is a single: true / true
type-tests.todo.chpl:8: error: done
