test/users/vass/type-tests.todo.future
bug: sync and single variables need to be passable to generic formals with 'ref' intent

See also:  test/functions/vass/sync-by-ref.future

Within the callee we would like to see the formal to be a 'sync'
when the actual is a sync, and analogously for 'single'.

This is not happening right now, so I get:

type-tests.todo.chpl:10: error: non-lvalue actual passed to ref argument
type-tests.todo.chpl:10: error: non-lvalue actual passed to ref argument

(note an incorrect line number in the last two messages,
which should be Lines 6 and 7 instead).

As the issues are fixed, please move the test/.good code into type-tests.chpl.
